cambio secc nosotros

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </a>
             <!----------------------------------------- MENU -->
             <ul class="menu">
-                <li><a href="pages/prestaciones.html">prestaciones</a></li>
+                <li><a href="pages/prestaciones.html">servicios</a></li>
                 <li><a href="#suc">sucursales</a></li>
                 <li><a href="#us">nosotros</a></li>
                 <li><a href="#contact">contacto</a></li>
@@ -80,31 +80,50 @@
     </section>
 
 
-    <!---------------------------------------- SECC ABOUT US -->
+    <!---------------------------------------- SECC  US -->
 
     <section class="main_us" id="us">
+        <div class="container-us">
+            <div class="historia">
+                <h2><i>NUESTRO <span>OBJETIVO</span></i></h2><br>
+                <img src="assets/img/us.png" alt="nosotros">
+                <p><span><i>Nueva Medicina</i></span> tiene como objetivo brindar al paciente una prestación
+                    similar en
+                    calidad
+                    técnica a la
+                    sanatorial,
+                    utilizando alternativas terapéuticas que brinda su grupo familiar y social, evitando los efectos no
+                    deseados
+                    de las
+                    estadías institucionales.</p><br><br>
+                <h3>¿Qué es la <span>internación domiciliaria</span> ?</h3><br><br>
+                <p>Es una modalidad de asistencia de salud en domicilio para adultos y niños que lo requieran, debido a
+                    condiciones de
+                    discapacidad o la pertinencia de su tratamiento en casa. Esta prestación está limitada al concepto
+                    médico acerca del
+                    mejoramiento del paciente.
+                    La prestación está incluida en el PMO (Programa Médico Obligatorio) con un piso de cobertura para
+                    quien
+                    lo requiera
+                    Existen entidades congregadas en la Cámara Argentina de Empresas de Internación Domiciliaria
+                    (CADEID)
+                    quienes cumplen
+                    los requisitos exigidos por el Estado para su operación y que prestan sus servicios a obras sociales
+                    y
+                    prepagas.</p><br><br>
+                <h3><i>QUIENES CONFIAN EN <span>NOSOTROS</span></i></h3>
+                <div class="carrusel" id="slider">
+                </div>
+            </div>
 
-        <divc class="historia-mbl">
-            Nueva Medicina tiene como objetivo brindar al paciente una prestación similar en calidad técnica a la
-            sanatorial,
-            utilizando alternativas terapéuticas que brinda su grupo familiar y social, evitando los efectos no deseados
-            de las
-            estadías institucionales.
-            <img src="assets/img/beneficios.jpg" alt="">
-        </divc>
+
+
+        </div>
+        </div>
     </section>
 
+    <!------------------------------------------ SECC CONTACTO -->
     <section class="main_contact" id="contact">
-
-
-        <!-------------------------- CARRUSEL -->
-        <div class="h2-carrusel">
-            <h2><i>QUIENES CONFIAN EN <span>NOSOTROS</span></i></h2>
-        </div>
-        <div class="carrusel" id="slider">
-        </div>
-
-        <!------------------------------------------ SECC CONTACTO -->
         <div class="form-contact">
             <form method="post" class="box-c1">
                 <p>Nombre:</p> <input type="text" name="nombre" required><br><br>
