--- a/pages/enf.html
+++ b/pages/enf.html
@@ -39,7 +39,7 @@
 
     <section class="main_enf">
         <div class="container-enf">
-            <h2>SERVICIOS GENERALES DE ENFERMERIA EN TU DOMICILIO</h2><img src="../assets/img/enf.jpg"
+            <h2>SERVICIOS GENERALES DE ENFERMERIA EN TU DOMICILIO</h2><img src="../assets/img/enf1.jpg"
                 alt="enfermeria general">
             <p>El cuidado de la salud en el
                 hogar también abarca una amplia gama de servicios de atención para mantener al paciente en
