--- a/pages/enf.html
+++ b/pages/enf.html
@@ -25,13 +25,16 @@
             <a href="../index.html" class="logo">
                 <img src="../assets/img/logo.png" alt="logo">
             </a>
+            <a href="../index.html" class="logo-mbl">
+                <img src="../assets/img/logo-mbl.jpg" alt="logo">
+            </a>
             <!----------------------------------------- MENU -->
             <ul class="menu">
-                <li><a href="../pages/prestaciones.html">prestaciones</a></li>
-                <li><a href="#suc">sucursales</a></li>
-                <li><a href="#us">nosotros</a></li>
-                <li><a href="#contact">contacto</a></li>
-                <li><a class="../login" href="../pages/login.html">ingresar</a></li>
+                <li><a href="">inicio</a></li>
+                <li><a href="">enfermería</a></li>
+                <li><a href="">rehabilitacion</a></li>
+                <li><a href="">nutrición</a></li>
+                <li><a class="login" href="pages/login.html">ingresar</a></li>
             </ul>
         </nav>
     </header>
