--- a/pages/kinesiologia.html
+++ b/pages/kinesiologia.html
@@ -21,18 +21,20 @@
 
 <body>
     <header class="topheader">
-        <nav class="topnav">
-            <a href="../index.html" class="logo">
-                <img src="../assets/img/logo.png" alt="logo">
-            </a>
-            <!----------------------------------------- MENU -->
-            <ul class="menu">
-                <li><a href="../pages/prestaciones.html">prestaciones</a></li>
-                <li><a href="#suc">sucursales</a></li>
-                <li><a href="#us">nosotros</a></li>
-                <li><a href="#contact">contacto</a></li>
-                <li><a class="../login" href="../pages/login.html">ingresar</a></li>
-            </ul>
+        <a href="../index.html" class="logo">
+            <img src="../assets/img/logo.png" alt="logo">
+        </a>
+        <a href="../index.html" class="logo-mbl">
+            <img src="../assets/img/logo-mbl.jpg" alt="logo">
+        </a>
+        <!----------------------------------------- MENU -->
+        <ul class="menu">
+            <li><a href="">inicio</a></li>
+            <li><a href="">enfermería</a></li>
+            <li><a href="">rehabilitacion</a></li>
+            <li><a href="">nutrición</a></li>
+            <li><a class="login" href="pages/login.html">ingresar</a></li>
+        </ul>
     </header>
 
 
