--- a/pages/prestaciones.html
+++ b/pages/prestaciones.html
@@ -26,13 +26,16 @@
             <a href="../index.html" class="logo">
                 <img src="../assets/img/logo.png" alt="logo">
             </a>
+            <a href="../index.html" class="logo-mbl">
+                <img src="../assets/img/logo-mbl.jpg" alt="logo">
+            </a>
             <!----------------------------------------- MENU -->
             <ul class="menu">
-                <li><a href="../pages/prestaciones.html">prestaciones</a></li>
-                <li><a href="../index.html">sucursales</a></li>
-                <li><a href="../index.html">nosotros</a></li>
-                <li><a href="../index.html">contacto</a></li>
-                <li><a class="login" href="../pages/login.html">ingresar</a></li>
+                <li><a href="../index.html">inicio</a></li>
+                <li><a href="enf.html">enfermería</a></li>
+                <li><a href="kinesiologia.html">rehabilitacion</a></li>
+                <li><a href="nutricion.html">nutrición</a></li>
+                <li><a class="login" href="pages/login.html">ingresar</a></li>
             </ul>
         </nav>
     </header>
