resulevo problema linkeo topbar

--- a/pages/kinesiologia.html
+++ b/pages/kinesiologia.html
@@ -21,20 +21,22 @@
 
 <body>
     <header class="topheader">
-        <a href="../index.html" class="logo">
-            <img src="../assets/img/logo.png" alt="logo">
-        </a>
-        <a href="../index.html" class="logo-mbl">
-            <img src="../assets/img/logo-mbl.jpg" alt="logo">
-        </a>
-        <!----------------------------------------- MENU -->
-        <ul class="menu">
-            <li><a href="">inicio</a></li>
-            <li><a href="">enfermería</a></li>
-            <li><a href="">rehabilitacion</a></li>
-            <li><a href="">nutrición</a></li>
-            <li><a class="login" href="pages/login.html">ingresar</a></li>
-        </ul>
+        <nav class="topnav">
+            <a href="../index.html" class="logo">
+                <img src="../assets/img/logo.png" alt="logo">
+            </a>
+            <a href="../index.html" class="logo-mbl">
+                <img src="../assets/img/logo-mbl.jpg" alt="logo">
+            </a>
+            <!----------------------------------------- MENU -->
+            <ul class="menu">
+                <li><a href="../index.html">inicio</a></li>
+                <li><a href="enf.html">enfermería</a></li>
+                <li><a href="kinesiologia.html">rehabilitacion</a></li>
+                <li><a href="nutricion.html">nutrición</a></li>
+                <li><a class="login" href="../pages/login.html">ingresar</a></li>
+            </ul>
+        </nav>
     </header>
 
 
@@ -43,7 +45,11 @@
             <div class="kinesioterapia">
                 <h2>KINESIOLOGÍA</h2>
                 <img src="../assets/img/kine1.jpg" alt="kinesiologia">
-                <p>Si hablamos de kinesiología es muy posible que muchas personas no sepan en qué consiste, sin embargo,
+                <p>Si hablamos de kinesiología es muy posible que muchas personas no sepan en
+                    qué
+                    consiste,
+                    sin
+                    embargo,
                     esta disciplina
                     médica es, en algunos países, sinónimo de la fisioterapia. Con motivo del Día del Kinesiólogo, que
                     se conmemora el día
