--- a/pages/prestaciones.html
+++ b/pages/prestaciones.html
@@ -35,7 +35,7 @@
                 <li><a href="enf.html">enfermería</a></li>
                 <li><a href="kinesiologia.html">rehabilitacion</a></li>
                 <li><a href="nutricion.html">nutrición</a></li>
-                <li><a class="login" href="pages/login.html">ingresar</a></li>
+                <li><a class="login" href="../pages/login.html">ingresar</a></li>
             </ul>
         </nav>
     </header>
