--- a/pages/nutricion.html
+++ b/pages/nutricion.html
@@ -30,11 +30,11 @@
             </a>
             <!----------------------------------------- MENU -->
             <ul class="menu">
-                <li><a href="">inicio</a></li>
-                <li><a href="">enfermería</a></li>
-                <li><a href="">rehabilitacion</a></li>
-                <li><a href="">nutrición</a></li>
-                <li><a class="login" href="pages/login.html">ingresar</a></li>
+                <li><a href="../index.html">inicio</a></li>
+                <li><a href="enf.html">enfermería</a></li>
+                <li><a href="kinesiologia.html">rehabilitacion</a></li>
+                <li><a href="nutricion.html">nutrición</a></li>
+                <li><a class="login" href="../pages/login.html">ingresar</a></li>
             </ul>
         </nav>
     </header>
